[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Python-Lua-Helper"
version = "0.1.2"
description = "Lua configuration system for your Python projects."
authors = [
    {name = "DarkCaster", email = "dark.caster@outlook.com"}
]
dependencies = []
requires-python = ">=3.8"
maintainers = [
    {name = "DarkCaster", email = "dark.caster@outlook.com"}
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lua", "configuration"]

[project.urls]
Repository = "https://github.com/DarkCaster/Perpetual.git"

[tool.hatch.build.targets.sdist]
include = [
  "*.py",
  "*.lua",
  "/test_example",
]

[tool.hatch.build.targets.wheel]
packages = [
  "/*.py",
  "/*.lua",
  "/test_example",
  "/LICENSE",
]
