[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Python-Lua-Helper"
version = "0.1.2"
description = "Lua configuration system for your Python projects."
authors = [{name = "DarkCaster", email = "dark.caster@outlook.com"}]
dependencies = []
requires-python = ">=3.8"
maintainers = [{name = "DarkCaster", email = "dark.caster@outlook.com"}]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lua", "configuration"]

[project.urls]
Repository = "https://github.com/DarkCaster/Perpetual.git"

[tool.hatch.build]
include = ["py_lua_helper.py", "test_example.py"]

[tool.hatch.build.targets.sdist]
include = [
	"py_lua_helper.py",
	"test_example.py",
	"loader.lua",
	"/test_example",
	"/lua/*.sh",
	"/lua/*.patch",
	"/lua/*.sha256",
	"/lua/lua-*.exe",
]

[tool.hatch.build.targets.sdist.force-include]
"lua/lua-windows-i686.exe" = "lua/lua-windows-i686.exe"
"lua/lua-windows-x86_64.exe" = "lua/lua-windows-x86_64.exe"

[tool.hatch.build.targets.wheel]
include = [
	"py_lua_helper.py",
	"test_example.py",
	"loader.lua",
	"/test_example",
	"/lua/lua.exe",
	"/lua/lua",
]

[tool.hatch.build.targets.wheel.hooks.custom]
