[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "Python-Lua-Helper"
dynamic = ["version"]
description = "Lua configuration system for your Python projects."
authors = [{name = "DarkCaster", email = "dark.caster@outlook.com"}]
dependencies = []
requires-python = ">=3.10"
maintainers = [{name = "DarkCaster", email = "dark.caster@outlook.com"}]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lua", "configuration"]

[project.urls]
Repository = "https://github.com/DarkCaster/Perpetual.git"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
packages = ["python_lua_helper"]
include = [
	"/build-mingw.sh",
	"/*.patch",
	"/*.sha256",
	"/lua-windows-*",
]

[tool.hatch.build.targets.wheel]
packages = ["python_lua_helper"]

[tool.hatch.build.targets.wheel.hooks.custom]
